assets/scss/component/navbar.scss
@use "../core" as *;
@use "../extra" as *;

$navbar-height: 8rem;

#desktop-links {
    display: none;
}

#mobile-burger {
    display: unset;
    align-self: center;
    height: 2em;
    width: 2em;
}

@media (min-width: $breakpoint-mobile) {
    #navbar {
        padding: 4rem 2rem !important;
        & > span > a {
            display: unset !important;
        }
    }
    #desktop-links {
        display: unset;
    }
    #mobile-burger {
        display: none;
    }
}

#navbar {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    padding: 2rem;
    & > span > img {
        width: 32px;
        height: 32px;
        border-radius: 9999px;
        margin: 0 1rem 0 0;
    }
    & > span > a {
        @include text-underline;
        cursor: pointer;
        display: none;
    }
    & > div > a {
        @include text-underline;
        cursor: pointer;
        margin: 0 0.5rem;
    }
}

#mobile-items {
    display: flex;
    align-items: flex-end;
    justify-content: space-evenly;
    padding: 0 2rem 2rem 2rem;
}

